# Nazm

./: .gitignore  AGENTS.md  AGENTS.txt  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  ROADMAP.md  build.sh  nazm
.github/workflows/: ci.yml
Docs/: API.md  ARCHITECTURE.md  BAA_INTEGRATION.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  LANGUAGE.md  STACK.md  STRUCTURE.md  TERMINOLOGY.md  TESTING.md  UNICODE.md
examples/: 1.مجمع  README.md  بيانات.مجمع  بيانات.نظم  حلقة.مجمع  حلقة.نظم  خروج.مجمع  خروج.نظم  مرحبا.نظم  ┘à╪▒╪¡╪¿╪º.┘à╪¼┘à╪╣  ╪¡┘ä┘é╪⌐.┘à╪¼┘à╪╣  ╪«╪▒┘ê╪¼.┘à╪¼┘à╪╣  ╪¿┘è╪º┘å╪º╪¬.┘à╪¼┘à╪╣
examples/diagnostics/: 1.مجمع  5.مجمع  README.md  ذاكرة-غير-صالحة.نظم  فاصلة-مفقودة.نظم  محرف-غير-معروف.نظم  وسم-غير-محلول.نظم  ┘ê╪│┘à-┘à┘â╪▒╪▒.┘à╪¼┘à╪╣  ┘ü╪º╪╡┘ä╪⌐-┘à┘ü┘é┘ê╪»╪⌐.┘à╪¼┘à╪╣
include/: nazm.h
src/: main.c
src/alloc/: arena.c  arena.h
src/api/: api.c
src/cli/: args.c  args.h  listing.c  listing.h
src/debug/: debug.h
src/encoder/: encoder.c  encoder.h  immediate.c  immediate.h  modrm.c  modrm.h  rex.c  rex.h  sse2.c  sse2.h  table.c
src/error/: error.c  error.h
src/io/: file.c  file.h
src/lexer/: keywords.c  keywords.h  lexer.c  lexer.h
src/output/: coff.c  coff.h  debug_line.c  debug_line.h  elf64.c  elf64.h  output.c  output.h  symbols.c  symbols.h
src/parser/: instruction.h  parser.c  parser.h
src/passes/: pass1.c  pass1.h  pass2.c  pass2.h
src/symtable/: symtable.c  symtable.h
src/unicode/: arabic.c  arabic.h
tests/: CMakeLists.txt
tests/differential/: compare_gas.cmake  emit_nazm_bytes.c  gas_reference.s
tests/fixtures/baa_coverage/: بيانات-باء.نظم  تنقيح-باء.نظم  حركة-باء.نظم  حساب-وتحكم-باء.نظم  عشري-باء.نظم
tests/integration/: api_cli_equivalence.cmake  api_fingerprint_contract.cmake  api_probe.c  capabilities_contract.cmake  cli_acceptance.cmake  examples_acceptance.cmake
tests/unit/: test_api.c  test_arena.c  test_cli_args.c  test_coff.c  test_diagnostics.c  test_elf64.c  test_encoder.c  test_encoder_matrix.c  test_examples.c  test_immediate.c  test_io.c  test_keywords.c  test_lexer.c  test_listing.c  test_parser.c  test_passes.c  test_rex.c  test_symtable.c  test_unicode.c
tools/: check-markdown.ps1
